xine-ui (0.99.6) unstable; urgency=low
  (write here, newest entry on top)

  * Install a shared-mime-info entry for .tox files, contributed by
    Peter Fox in bug #10.
  * New commands/keybindings from Richard van Paasen:
    "PVRSetInput" changes input on ivtv cards (input_pvr);
    "PVRSetMark", "PVRSetName", "PVRSave" enable saving
    of live streams from ivtv cards (input_pvr).
  * New command/keybinding from Richard van Paasen:
    "SetPosition100%" jumps to end of stream.
  * Recognize .rmvb files, closes debian bug #437864.
  * Recognize .m2p files, closes debian bug #419002.
  * Fixes for stdctl race conditions, contributed by Stas Sergeev
  * Resetting the video controls restores the driver default settings
    instead of fixed center values
  * New commands/keybindings from Stas Sergeev:
    "SelectMrl" with a numeric parameter allows to select an MRL directly
    by its position number in the playlist.
    "KeyBindingsEnable" with optional numeric parameter allows to enable/disable
    the keybindings (disabled by param equal to 0, else enabled), so stdctl can
    get exclusive control over the keys with disabled bindings; this command is
    not bound to a key by default for an obvious reason (don't dare to bind) ;-)
  * Enhanced commands/keybindings with contributions from Stas Sergeev:
    "PlaylistStop" accepts a numeric parameter to set the stop state absolutely
    (continue if param equals 0, else stop) and persistent, i.e. not reset to
    "continue" after playing current stream, as opposed to the usual toggling
    without parameter; usual toggling is now also possible when no stream is
    currently played, allowing to change the selection at any time.
    "ToggleLoopMode" and "ToggleAspectRatio" accept a numeric parameter as index
    to make a direct selection from the list of their possible states
  * Stdctl enhancements and fixes from Stas Sergeev:
    Feedback messages and echoing of key presses to standard output added,